--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -5,6 +5,7 @@
   with_items:
     - postgresql
     - postgresql-contrib
+    - libpq-dev
     - python-psycopg2
   tags: packages
 
@@ -14,11 +15,6 @@
 - name: Ensure database is created
   sudo_user: postgres
   postgresql_db: name={{ db_name }}
-                 encoding='UTF-8'
-                 lc_collate='en_US.UTF-8'
-                 lc_ctype='en_US.UTF-8'
-                 template='template0'
-                 state=present
 
 - name: Ensure user has access to the database
   sudo_user: postgres
@@ -26,10 +22,8 @@
                    name={{ db_user }}
                    password={{ db_password }}
                    priv=ALL
-                   state=present
 
 - name: Ensure user does not have unnecessary privileges
   sudo_user: postgres
   postgresql_user: name={{ db_user }}
                    role_attr_flags=NOSUPERUSER,NOCREATEDB
-                   state=present
