--- a/roles/web/tasks/setup_git_repo.yml
+++ b/roles/web/tasks/setup_git_repo.yml
@@ -5,11 +5,6 @@
        version="{{ git_branch }}"
        dest={{ project_path }}
        accept_hostkey=yes
+       force=true
   when: setup_git_repo is defined and setup_git_repo
-  tags: git
-
-- name: Delete all .pyc files
-  command: find . -name '*.pyc' -delete
-  args:
-    chdir: "{{ project_path }}"
   tags: git
