--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,17 @@
 ---
 
-- include: dbservers.yml
+- name: Provision a {{ application_name }} web server
+  hosts: localhost
+  sudo: yes
+  sudo_user: root
+  remote_user: root
+  vars:
+    - update_apt_cache: yes
+  vars_files:
+    - env_vars/base.yml
+    - env_vars/{{ env }}.yml
 
-- include: webservers.yml
+  roles:
+    - base
+    - postgresql
+    - web
