update vagrant files

--- a/env_vars/vagrant.yml
+++ b/env_vars/vagrant.yml
@@ -31,7 +31,7 @@ ssl_key_password: password
 
 
 # Application settings.
-django_settings_file: "{{ application_name }}.settings.local"
+django_settings_file: "{{ application_name }}.settings.development"
 django_secret_key: "akr2icmg1n8%z^3fe3c+)5d0(t^cy-2_25rrl35a7@!scna^1#"
 
 run_django_db_migrations: yes
