--- a/vagrant.yml
+++ b/vagrant.yml
@@ -6,7 +6,6 @@
   sudo_user: root
   remote_user: vagrant
   vars:
-    - setup_git_repo: yes
     - update_apt_cache: yes
   vars_files:
     - env_vars/base.yml
@@ -14,7 +13,5 @@
 
   roles:
     - base
-    - db
-    - rabbitmq
+    - postgresql
     - web
-    - celery
