--- a/env_vars/development.yml
+++ b/env_vars/development.yml
@@ -2,7 +2,7 @@
 
 # Git settings.
 setup_git_repo: yes
-git_branch: master
+git_branch: scf
 
 
 # Database settings.
@@ -30,7 +30,7 @@ ssl_key_password: password
 
 # Application settings.
 django_settings_file: "{{ application_name }}.settings.development"
-django_secret_key: "akr2icmg1n8%z^3fe3c+)5d0(t^cy-2_25rrl35a7@!scna^1#"
+django_secret_key: "e5zjfb$nbtq(u(go5q9etj^t@mhl2kr&w_np%3_zq+g4rx1n!l"
 
-run_django_db_migrations: yes
-run_django_collectstatic: yes
+run_django_db_migrations: no
+run_django_collectstatic: no
