--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -26,10 +26,7 @@ nginx_media_dir: "{{ virtualenv_path }}/media/"
 django_environment:
   DJANGO_SETTINGS_MODULE: "{{ django_settings_file }}"
   DJANGO_SECRET_KEY: "{{ django_secret_key }}"
-  MEDIA_ROOT: "{{ nginx_media_dir }}"
+  #MEDIA_ROOT: "{{ nginx_media_dir }}"
   STATIC_ROOT: "{{ nginx_static_dir }}"
-  DATABASE_USER: "{{ db_user }}"
-  DATABASE_PASSWORD: "{{ db_password }}"
-  EMAIL_HOST: "{{ email_host|default(omit) }}"
-  EMAIL_HOST_USER: "{{ email_host_user|default(omit) }}"
-  EMAIL_HOST_PASSWORD: "{{ email_host_password|default(omit) }}"
+  #DATABASE_USER: "{{ db_user }}"
+  #DATABASE_PASSWORD: "{{ db_password }}"
