--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -28,5 +28,4 @@ django_environment:
   DJANGO_SECRET_KEY: "{{ django_secret_key }}"
   #MEDIA_ROOT: "{{ nginx_media_dir }}"
   STATIC_ROOT: "{{ nginx_static_dir }}"
-  #DATABASE_USER: "{{ db_user }}"
-  #DATABASE_PASSWORD: "{{ db_password }}"
+  MAG_DATABASE_PASSWORD: "{{ mag_db_password }}"
