--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -3,7 +3,7 @@
 - include: install_additional_packages.yml
   tags: packages
 
-- include: create_users_and_groups.yml
+#- include: create_users_and_groups.yml
 
 - include: setup_virtualenv.yml
   tags: virtualenv
