--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -8,11 +8,6 @@ application_log_file: "{{ application_log_dir }}/gunicorn_supervisor.log"
 requirements_file: "{{ project_path }}/requirements.txt"
 
 
-# Gunicorn settings
-gunicorn_user: "{{ application_name }}"
-gunicorn_group: webapps
-
-
 # Nginx settings
 nginx_http_port: 80
 nginx_https_port: 443
@@ -29,3 +24,5 @@ django_environment:
   #MEDIA_ROOT: "{{ nginx_media_dir }}"
   STATIC_ROOT: "{{ nginx_static_dir }}"
   MAG_DATABASE_PASSWORD: "{{ mag_db_password }}"
+  DBLP_DATABASE_PASSWORD: "{{ dblp_db_password }}"
+  CITESEERX_DATABASE_PASSWORD: "{{ citeseerx_db_password }}"
