--- a/env_vars/development.yml.sample
+++ b/env_vars/development.yml.sample
@@ -13,6 +13,7 @@ citeseerx_db_password: CITESEERX-DATABASE-PASSWORD-HERE
 # Gunicorn settings
 gunicorn_user: "{{ application_name }}"
 gunicorn_group: webapps
+#gunicorn_timeout_seconds: 30
 
 # Gunicorn settings. For the number of workers, a good rule to follow is
 # 2 x number of CPUs + 1
