--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -24,5 +24,6 @@ django_environment:
   #MEDIA_ROOT: "{{ nginx_media_dir }}"
   STATIC_ROOT: "{{ nginx_static_dir }}"
   MAG_DATABASE_PASSWORD: "{{ mag_db_password }}"
+  DBLP_DATABASE_USER: "{{ dblp_db_user }}"
   DBLP_DATABASE_PASSWORD: "{{ dblp_db_password }}"
   CITESEERX_DATABASE_PASSWORD: "{{ citeseerx_db_password }}"
