--- a/roles/grobid/defaults/main.yml
+++ b/roles/grobid/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 lib_path: "/webapps/{{ application_name }}/lib"
-grobid_path: "{{ lib_path  }}/grobid"
-grobid_download_url: "https://github.com/kermitt2/grobid"
+grobid_path: "{{ lib_path }}/grobid"
+grobid_download_url: "https://github.com/kermitt2/grobid.git"
 grobid_maven_skip_test: "true"
