--- a/env_vars/vagrant.yml.sample
+++ b/env_vars/vagrant.yml.sample
@@ -6,10 +6,16 @@ git_branch: master
 
 
 # Database settings.
-db_user: "{{ application_name }}"
-db_name: "{{ application_name }}"
-db_password: password
+#mag_db_password: MAG-DATABASE-PASSWORD
+#dblp_db_user: DBLP-DATABASE-USERNAME
+#dblp_db_password: DBLP-DATABASE-PASSWORD
+#citeseerx_db_user: CITESEERX-DATABASE-USER
+#citeseerx_db_password: CITESEERX-DATABASE-PASSWORD
 
+# Gunicorn settings
+gunicorn_user: "{{ application_name }}"
+gunicorn_group: webapps
+gunicorn_timeout_seconds: 300
 
 # Gunicorn settings. For the number of workers, a good rule to follow is
 # 2 x number of CPUs + 1
@@ -19,8 +25,6 @@ gunicorn_num_workers: 3
 # you make a request, basically reloading the code. Very handy
 # when developing. Set to 0 for unlimited requests (default).
 gunicorn_max_requests: 0
-
-gunicorn_timeout_seconds: 300
 
 
 # Nginx settings.
