--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -23,8 +23,12 @@ django_environment:
   DJANGO_SECRET_KEY: "{{ django_secret_key }}"
   #MEDIA_ROOT: "{{ nginx_media_dir }}"
   STATIC_ROOT: "{{ nginx_static_dir }}"
+  MAG_DATABASE_NAME: "{{ mag_db_name }}"  
+  MAG_DATABASE_USER: "{{ mag_db_user }}"
   MAG_DATABASE_PASSWORD: "{{ mag_db_password }}"
+  DBLP_DATABASE_NAME: "{{ dblp_db_name }}" 
   DBLP_DATABASE_USER: "{{ dblp_db_user }}"
   DBLP_DATABASE_PASSWORD: "{{ dblp_db_password }}"
+  CITESEERX_DATABASE_NAME: "{{ citeseerx_db_name }}"
   CITESEERX_DATABASE_USER: "{{ citeseerx_db_user }}"
   CITESEERX_DATABASE_PASSWORD: "{{ citeseerx_db_password }}"
