--- a/env_vars/development.yml.sample
+++ b/env_vars/development.yml.sample
@@ -1,11 +1,14 @@
 ---
 
-# Git settings.
+###############################################################################
+# Basic settings (repository and databases)
+###############################################################################
+
+# Git settings
 setup_git_repo: yes
 git_branch: master
 
-
-# Database settings.
+# Database settings
 mag_db_name: mag
 mag_db_user: mag
 mag_db_password: password
@@ -17,6 +20,10 @@ citeseerx_db_user: citeseerx
 citeseerx_db_password: password
 
 
+###############################################################################
+# Gunicorn
+###############################################################################
+
 # Gunicorn settings
 gunicorn_user: "{{ application_name }}"
 gunicorn_group: webapps
@@ -26,23 +33,54 @@ gunicorn_group: webapps
 # 2 x number of CPUs + 1
 gunicorn_num_workers: 3
 
-
 # Setting this to 1 will restart the Gunicorn process each time
 # you make a request, basically reloading the code. Very handy
 # when developing. Set to 0 for unlimited requests (default).
 gunicorn_max_requests: 0
 
 
-# Nginx settings.
+###############################################################################
+# Nginx
+###############################################################################
+
+# Nginx settings
 nginx_server_name: "{{ inventory_hostname }}"
 ssl_src_dir: ssl_self_signed
 ssl_dest_dir: /etc/ssl
 ssl_key_password: password
 
 
-# Application settings.
+###############################################################################
+# RabbitMQ and Celery
+###############################################################################
+
+# RabbitMQ settings
+rabbitmq_server_name: "{{ inventory_hostname }}"
+
+rabbitmq_admin_user: admin
+rabbitmq_admin_password: password
+
+rabbitmq_application_vhost: "{{ application_name }}"
+rabbitmq_application_user: "{{ application_name }}"
+rabbitmq_application_password: password
+
+
+# Celery settings
+celery_user: "{{ application_name }}"
+celery_group: webapps
+celery_num_workers: 2
+
+# Celery broker url
+broker_url: "amqp://{{ rabbitmq_application_user }}:{{ rabbitmq_application_password }}@localhost/{{ rabbitmq_application_vhost }}"
+
+
+###############################################################################
+# Django
+###############################################################################
+
+# Application settings
 django_settings_file: "{{ application_name }}.settings.development"
-django_secret_key: "DJANGO-SECRET-KEY-HERE"
+django_secret_key: "akr2icmg1n8%z^3fe3c+)5d0(t^cy-2_25rrl35a7@!scna^1#"
 
 run_django_db_migrations: yes
 run_django_collectstatic: yes
