--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -12,18 +12,8 @@
 - name: Ensure the PostgreSQL service is running
   service: name=postgresql state=started enabled=yes
 
-#- name: Ensure database is created
-#  sudo_user: postgres
-#  postgresql_db: name={{ db_name }}
-#
-#- name: Ensure user has access to the database
-#  sudo_user: postgres
-#  postgresql_user: db={{ db_name }}
-#                   name={{ db_user }}
-#                   password={{ db_password }}
-#                   priv=ALL
-#
-#- name: Ensure user does not have unnecessary privileges
-#  sudo_user: postgres
-#  postgresql_user: name={{ db_user }}
-#                   role_attr_flags=NOSUPERUSER,NOCREATEDB
+- include: setup_database_dblp.yml
+
+- include: setup_database_mag.yml
+
+- include: setup_database_citeseerx.yml
