--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -9,16 +9,21 @@
   tags: virtualenv
 
 - include: setup_git_repo.yml
-  tags: deploy
+  tags:
+    - deploy
+    - quick
 
 - include: setup_django_app.yml
-  tags: deploy
+  tags:
+    - deploy
 
 - include: setup_supervisor.yml
   tags: supervisor
 
 - include: set_file_permissions.yml
-  tags: deploy
+  tags:
+    - deploy
+    - quick
 
 - include: setup_nginx.yml
   tags: nginx
