--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Ensure the PostgreSQL service is running
   service: name=postgresql state=started enabled=yes
 
-- include: setup_database_dblp.yml
+- include: setup_database_default.yml
 
 - include: setup_database_mag.yml
 
