set grobid file permissions, configure handler

--- a/roles/grobid/handlers/main.yml
+++ b/roles/grobid/handlers/main.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: start grobid
-  command: mvn -Dmaven.test.skip={{ grobid_maven_skip_test }} jetty:run-war
+  command: nohup mvn -Dmaven.test.skip={{ grobid_maven_skip_test }} jetty:run-war &
            chdir={{grobid_path}}/grobid-service
