--- a/env_vars/vagrant.yml.sample
+++ b/env_vars/vagrant.yml.sample
@@ -15,9 +15,9 @@ default_db_password: password
 mag_db_name: mag
 mag_db_user: mag
 mag_db_password: password
-citeseerx_db_name: citeseerx
-citeseerx_db_user: citeseerx
-citeseerx_db_password: password
+dblp_db_name: dblp
+dblp_db_user: dblp
+dblp_db_password: password
 
 
 ###############################################################################
