--- a/env_vars/development.yml.sample
+++ b/env_vars/development.yml.sample
@@ -84,4 +84,5 @@ django_secret_key: "akr2icmg1n8%z^3fe3c+)5d0(t^cy-2_25rrl35a7@!scna^1#"
 
 run_django_db_migrations: yes
 run_django_db_mag_migrations: yes
+run_django_db_dblp_migrations: yes
 run_django_collectstatic: yes
